<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="4"
    android:orientation="horizontal"
    android:layout_gravity="center"
    tools:context=".Main4Activity"
>
    <Button
        android:id="@+id/row_01_col_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_01_col_01_text"
    />
    <Button
        android:id="@+id/row_01_col_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_01_col_02_text"
    />
    <Button
        android:id="@+id/row_01_col_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_01_col_03_text"
    />
    <Button
        android:id="@+id/row_01_col_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_01_col_04_text"
    />
    <Button
        android:id="@+id/row_02_col_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_02_col_01_text"
    />
    <Button
        android:id="@+id/row_02_col_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_02_col_02_text"
    />
    <Button
        android:id="@+id/row_02_col_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_02_col_03_text"
    />
    <Button
        android:id="@+id/row_02_col_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_02_col_04_text"
    />
    <Button
        android:id="@+id/row_03_col_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_03_col_01_text"
    />
    <Button
        android:id="@+id/row_03_col_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_03_col_02_text"
    />
    <Button
        android:id="@+id/row_03_col_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_03_col_03_text"
    />
    <Button
        android:id="@+id/row_03_col_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_03_col_04_text"
    />
    <Button
        android:id="@+id/row_04_col_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_04_col_01_text"
    />
    <Button
        android:id="@+id/row_04_col_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_04_col_02_text"
        />
    <Button
        android:id="@+id/row_04_col_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_04_col_03_text"
        />
    <Button
        android:id="@+id/row_04_col_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_04_row_04_col_04_text"
        />
</GridLayout>
