<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
>
    <TextView
        android:id="@+id/choose_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_02_choose_food_text"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    >
        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_02_question_text"
        />
        <ToggleButton
            android:id="@+id/toggle_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:textOn="@string/layout_02_toggle_button_text_on"
            android:textOff="@string/layout_02_toggle_button_text_off"
        />
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkbox_whopper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_02_checkbox_whopper"
    />
    <CheckBox
        android:id="@+id/checkbox_french_fries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_02_checkbox_french_fries"
    />
    <CheckBox
        android:id="@+id/checkbox_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_02_checkbox_drink"
    />
    <CheckBox
        android:id="@+id/checkbox_sauce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_02_checkbox_sauce"
    />
    <CheckBox
        android:id="@+id/checkbox_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_02_checkbox_dessert"
    />
    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:onClick="goNext"
    />
</LinearLayout>
