<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
>
    <Button
        android:id="@+id/button_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_01_button_enter_text"
    />
    <TextView
        android:id="@+id/first_name"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/button_enter"
        android:text="@string/layout_01_first_name_text"
    />
    <EditText
        android:id="@+id/first_name_edit"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_below="@+id/button_enter"
        android:layout_toEndOf="@+id/first_name"
    />
    <TextView
        android:id="@+id/last_name"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/first_name"
        android:text="@string/layout_01_last_name_text"
    />
    <EditText
        android:id="@+id/last_name_edit"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_below="@+id/first_name"
        android:layout_toEndOf="@+id/first_name"
    />
    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:layout_below="@+id/last_name"
        android:onClick="goNext"
    />
</RelativeLayout>